force-app/main/default/objects/Facilities__c/Facilities__c.object-meta.xml
<CustomObject>
    <label>Existing Facility</label>
    <nameField>
        <displayFormat>F-{0000}</displayFormat>
        <label>Facilities Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Existing Facilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>