force-app/main/default/objects/Facilities__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <inlineHelpText>Name of Bank or Non-Bank Institution</inlineHelpText>
    <label>Institution Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>