force-app/main/default/objects/Facilities__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Case#1050 - 05/2011 - Rudolf Niehaus</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>