force-app/main/default/objects/Facilities__c/fields/Counterparty__c.field-meta.xml
<CustomField>
    <fullName>Counterparty__c</fullName>
    <description>Case#1050 - 05/2011 - Rudolf Niehaus
New field for the Connected facilities record type</description>
    <inlineHelpText>Name of Counterparty</inlineHelpText>
    <label>Counterparty</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>