force-app/main/default/objects/Facilities__c/fields/Date_for_Utilisation__c.field-meta.xml
<CustomField>
    <fullName>Date_for_Utilisation__c</fullName>
    <label>Draw Date</label>
    <type>Date</type>
</CustomField>