force-app/main/default/objects/Facilities__c/fields/FacilitiesCurrencytoComparewithOpp__c.field-meta.xml
<CustomField>
    <fullName>FacilitiesCurrencytoComparewithOpp__c</fullName>
    <formula>CASE(CurrencyIsoCode, 
&quot;USD&quot;,&quot;USD&quot;, 
&quot;ZAR&quot;,&quot;ZAR&quot;, 
&quot;Another Currency&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FacilitiesCurrencytoComparewithOpp</label>
    <type>Text</type>
</CustomField>