force-app/main/default/objects/Facilities__c/fields/Facility_Grand_Parent_Product_GPP__c.field-meta.xml
<CustomField>
    <fullName>Facility_Grand_Parent_Product_GPP__c</fullName>
    <label>Facility Grand Parent Product (GPP)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Electronic Payments &amp; Collections</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>Equity Derivatives</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>International Trade Products</fullName>
            </value>
            <value>
                <fullName>Liquidity Management</fullName>
            </value>
            <value>
                <fullName>Loans</fullName>
            </value>
            <value>
                <fullName>Physical Payments &amp; Collections</fullName>
            </value>
            <value>
                <fullName>VAF</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>