force-app/main/default/objects/Facilities__c/fields/Facility_Parent_Product_PP__c.field-meta.xml
<CustomField>
    <fullName>Facility_Parent_Product_PP__c</fullName>
    <label>Facility Parent Product (PP)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_Grand_Parent_Product_GPP__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Asset Finance</fullName>
            </value>
            <value>
                <fullName>Bond Positions</fullName>
            </value>
            <value>
                <fullName>Call Loans</fullName>
            </value>
            <value>
                <fullName>Card</fullName>
            </value>
            <value>
                <fullName>Cashman Account</fullName>
            </value>
            <value>
                <fullName>CFC Accounts</fullName>
            </value>
            <value>
                <fullName>Credit Derivatives</fullName>
            </value>
            <value>
                <fullName>Current Account (Not Linked to Cashman)</fullName>
            </value>
            <value>
                <fullName>Equities</fullName>
            </value>
            <value>
                <fullName>Equity Loans</fullName>
            </value>
            <value>
                <fullName>FX Options</fullName>
            </value>
            <value>
                <fullName>GSTBF</fullName>
            </value>
            <value>
                <fullName>Lending Guarantees</fullName>
            </value>
            <value>
                <fullName>Letters of Credit</fullName>
            </value>
            <value>
                <fullName>Loans Term</fullName>
            </value>
            <value>
                <fullName>Performance Guarantees</fullName>
            </value>
            <value>
                <fullName>Shareholder Loans</fullName>
            </value>
            <value>
                <fullName>Structured Trade Finance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>