force-app/main/default/objects/Facilities__c/fields/Facility_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Facility_Pricing__c</fullName>
    <description>Pricing of requested facility</description>
    <inlineHelpText>Pricing of Requested Facility, Dependant on Structuring of the Opportunity</inlineHelpText>
    <label>Facility Pricing</label>
    <length>100</length>
    <type>Text</type>
</CustomField>