force-app/main/default/objects/Facilities__c/fields/Facility_Product__c.field-meta.xml
<CustomField>
    <fullName>Facility_Product__c</fullName>
    <label>Facility Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Facility_Parent_Product_PP__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Back-to-Back Guarantee</fullName>
            </value>
            <value>
                <fullName>Back-to-Back LC</fullName>
            </value>
            <value>
                <fullName>Call Loan</fullName>
            </value>
            <value>
                <fullName>Corp Banking Pref Shares</fullName>
            </value>
            <value>
                <fullName>Discount LC&apos;s - Non-SB Customer</fullName>
            </value>
            <value>
                <fullName>Discount LC&apos;s - SB Customer</fullName>
            </value>
            <value>
                <fullName>Export LC&apos;s</fullName>
            </value>
            <value>
                <fullName>Import LC&apos;s</fullName>
            </value>
            <value>
                <fullName>Inward Foreign Guarantee</fullName>
            </value>
            <value>
                <fullName>Local Guarantee</fullName>
            </value>
            <value>
                <fullName>Other Advances</fullName>
            </value>
            <value>
                <fullName>Outward Foreign Guarantee</fullName>
            </value>
            <value>
                <fullName>Overdraft</fullName>
            </value>
            <value>
                <fullName>PF - Property Loan</fullName>
            </value>
            <value>
                <fullName>Shipping Guarantee</fullName>
            </value>
            <value>
                <fullName>Term Lending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>