force-app/main/default/objects/Facilities__c/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <inlineHelpText>Bank or Non-Bank Institution</inlineHelpText>
    <label>Institution Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Non-Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>