force-app/main/default/objects/Facilities__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <inlineHelpText>Current Facilities</inlineHelpText>
    <label>Current Facilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>