force-app/main/default/objects/Facilities__c/fields/Remaining_Term_Tenor_Months__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Term_Tenor_Months__c</fullName>
    <description>Term/Tenor (Months) for each Product that is a Facility and Remaining Term/Tenor (Months) for each Existing Facility that has a sought facilities amount that is increasing/decreasing</description>
    <inlineHelpText>Term of Underlying Facility, in Integer Months</inlineHelpText>
    <label>Remaining Term/Tenor (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>