force-app/main/default/objects/Facilities__c/fields/Security__c.field-meta.xml
<CustomField>
    <fullName>Security__c</fullName>
    <label>Security</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>