force-app/main/default/objects/Facilities__c/fields/Sought_Facilities__c.field-meta.xml
<CustomField>
    <fullName>Sought_Facilities__c</fullName>
    <description>Case#1050 - 05/2011 - Rudolf Niehaus
Fields that was added to be used as a sought facility related to the current facility and must be displayed on the same like as the current facility on the PDF form</description>
    <inlineHelpText>Sought Facilities. If an Existing Facility is decreasing please add a New Facility (Product) with negative ‘Sought Facilities’ to reflect the decreasing Existing Facility</inlineHelpText>
    <label>Sought Facilities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>