force-app/main/default/objects/Facilities__c/fields/Term_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Term_Tenor__c</fullName>
    <description>Term/Tenor (Months) for each Product that is a Facility and Remaining Term/Tenor (Months) for each Existing Facility that has a sought facilities amount that is increasing/decreasing</description>
    <inlineHelpText>Term of underlying facility, in integer months</inlineHelpText>
    <label>Term/Tenor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>