force-app/main/default/objects/Facilities__c/recordTypes/Connected_Facilities.recordType-meta.xml
<RecordType>
    <fullName>Connected_Facilities</fullName>
    <active>true</active>
    <description>Related Entity Existing Facilities with Standard Bank</description>
    <label>Connected Facilities</label>
</RecordType>