force-app/main/default/objects/Facilities__c/recordTypes/Existing_Facilities.recordType-meta.xml
<RecordType>
    <fullName>Existing_Facilities</fullName>
    <active>true</active>
    <description>Client’s Existing Facilities with Standard Bank</description>
    <label>Existing Facilities</label>
</RecordType>