force-app/main/default/objects/Facilities__c/recordTypes/Other_Facilities.recordType-meta.xml
<RecordType>
    <fullName>Other_Facilities</fullName>
    <active>true</active>
    <description>Client’s Existing Facilities with Other Bank and Non-Bank Institutions</description>
    <label>Other Facilities</label>
</RecordType>