force-app/main/default/objects/Facilities__c/validationRules/FacilitiesCurrencyDiffToOpptCurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>FacilitiesCurrencyDiffToOpptCurrency</fullName>
    <active>true</active>
    <errorConditionFormula>FacilitiesCurrencytoComparewithOpp__c&lt;&gt;Opportunity__r.OpptCurrencyForProducts__c</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>The Facilities currency has to be the same as the Opportunity currency</errorMessage>
</ValidationRule>